--- a/index.html
+++ b/index.html
@@ -6,9 +6,40 @@
     <link rel="apple-touch-icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THOTH - Smart Book Discovery</title>
+    <!-- Preconnect to Google Fonts for faster loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Preconnect to Supabase -->
+    <link rel="preconnect" href="https://dpxqufspmqxjjeypltzh.supabase.co" />
+    <!-- Critical inline styles for instant first paint -->
+    <style>
+      body { margin: 0; background: #faf8f5; }
+      #root { min-height: 100vh; }
+      .initial-loader {
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: #faf8f5;
+      }
+      .initial-loader .spinner {
+        width: 48px;
+        height: 48px;
+        border: 4px solid #f59e0b;
+        border-top-color: transparent;
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin { to { transform: rotate(360deg); } }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Initial loader shown before React hydrates -->
+      <div class="initial-loader">
+        <div class="spinner"></div>
+      </div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
